# cc-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/plans/: 2026-02-16-cc-proxy-design.md  2026-02-16-cc-proxy-implementation.md
tests/: test_config.py  test_convert_request.py  test_convert_response.py  test_integration.py  test_streaming.py
