[project]
name = "cc-proxy"
version = "0.1.0"
description = "Local proxy that translates Anthropic Messages API to OpenAI Chat Completions format"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
]

[project.scripts]
cc-proxy = "main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
